--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,8 @@
 core/build/*.js
 node_modules
 core/modules/**/test
+src/themes/dwshop-theme/pages/TermsConditions.vue
+src/themes/dwshop-theme/pages/Category.vue
+src/themes/dwshop-theme/components/core/blocks/Switcher/Language.vue
+src/themes/dwshop-theme/components/theme/blocks/Collection/Collection.vue
+src/themes/dwshop-theme/pages/Home.vue
